<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:paddingBottom="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">


        <RelativeLayout
            android:id="@+id/head_ccm_l"
            android:layout_below="@id/team_fees_l"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/bg_card">

            <RelativeLayout
                android:id="@+id/head_ccm_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/head_ccm_icon"
                    android:src="@drawable/event_inchr"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="13dp" />


                <TextView
                    style="@style/InfoHeader"
                    android:id="@+id/head_ccm_h"
                    android:text="@string/head_ccm"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_toRightOf="@id/head_ccm_icon" />


                <View
                    android:id="@+id/head_ccm_d"
                    android:layout_below="@id/head_ccm_icon"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#40111111"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/head_ccm_header">

                <ImageView
                    android:id="@+id/head_ccm_name_icon"
                    android:src="@drawable/event_inchr_name"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="10dp" />

                <TextView
                    style="@style/InfoData.EventInchargeData"
                    android:id="@+id/head_ccm_name_text"
                    android:layout_toRightOf="@id/head_ccm_name_icon"
                    android:layout_height="35dp"
                    android:layout_width="match_parent"
                    android:text="@string/head_ccm_name" />

                <ImageView
                    android:id="@+id/head_ccm_num_icon"
                    android:layout_below="@id/head_ccm_name_icon"
                    android:src="@drawable/phone"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="10dp" />

                <TextView
                    style="@style/InfoData.EventInchargeData.Num"
                    android:id="@+id/head_ccm_num_text"
                    android:layout_toRightOf="@id/head_ccm_num_icon"
                    android:layout_below="@id/head_ccm_name_text"
                    android:layout_height="35dp"
                    android:layout_width="match_parent"
                    android:text="@string/head_ccm_num" />

                <ImageView
                    android:id="@+id/head_ccm_email_icon"
                    android:layout_below="@id/head_ccm_num_icon"
                    android:src="@drawable/email"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="10dp" />

                <TextView
                    style="@style/InfoData.EventInchargeData"
                    android:id="@+id/head_ccm_email_text"
                    android:layout_toRightOf="@id/head_ccm_email_icon"
                    android:layout_below="@id/head_ccm_num_text"
                    android:layout_height="35dp"
                    android:layout_width="match_parent"
                    android:text="@string/head_ccm_email" />


            </RelativeLayout>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/a_head_ccm_l"
            android:layout_below="@id/head_ccm_l"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/bg_card"
            android:layout_marginTop="8dp">

            <RelativeLayout
                android:id="@+id/a_head_ccm_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/a_head_ccm_icon"
                    android:src="@drawable/event_inchr"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="13dp" />


                <TextView
                    style="@style/InfoHeader"
                    android:id="@+id/a_head_ccm_h"
                    android:text="@string/a_head_ccm"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_toRightOf="@id/a_head_ccm_icon"
                    android:textSize="15sp" />


                <View
                    android:id="@+id/a_head_ccm_d"
                    android:layout_below="@id/a_head_ccm_icon"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#40111111"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/a_head_ccm_header">

                <ImageView
                    android:id="@+id/a_head_ccm_name_icon"
                    android:src="@drawable/event_inchr_name"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="10dp" />

                <TextView
                    style="@style/InfoData.EventInchargeData"
                    android:id="@+id/a_head_ccm_name_text"
                    android:layout_toRightOf="@id/a_head_ccm_name_icon"
                    android:layout_height="35dp"
                    android:layout_width="match_parent"
                    android:text="@string/a_head_ccm_name" />

                <ImageView
                    android:id="@+id/a_head_ccm_num_icon"
                    android:layout_below="@id/a_head_ccm_name_icon"
                    android:src="@drawable/phone"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="10dp" />

                <TextView
                    style="@style/InfoData.EventInchargeData.Num"
                    android:id="@+id/a_head_ccm_num_text"
                    android:layout_toRightOf="@id/a_head_ccm_num_icon"
                    android:layout_below="@id/a_head_ccm_name_text"
                    android:layout_height="35dp"
                    android:layout_width="match_parent"
                    android:text="@string/a_head_ccm_num" />

                <ImageView
                    android:id="@+id/a_head_ccm_email_icon"
                    android:layout_below="@id/a_head_ccm_num_icon"
                    android:src="@drawable/email"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="10dp" />

                <TextView
                    style="@style/InfoData.EventInchargeData"
                    android:id="@+id/a_head_ccm_email_text"
                    android:layout_toRightOf="@id/a_head_ccm_email_icon"
                    android:layout_below="@id/a_head_ccm_num_text"
                    android:layout_height="35dp"
                    android:layout_width="match_parent"
                    android:text="@string/a_head_ccm_email" />


            </RelativeLayout>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/reg_ccm_l"
            android:layout_below="@id/a_head_ccm_l"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/bg_card"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <RelativeLayout
                android:id="@+id/reg_ccm_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/reg_ccm_icon"
                    android:src="@drawable/event_inchr"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="13dp" />


                <TextView
                    style="@style/InfoHeader"
                    android:id="@+id/reg_ccm_h"
                    android:text="@string/reg_ccm"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_toRightOf="@id/reg_ccm_icon"
                    android:textSize="15sp" />


                <View
                    android:id="@+id/reg_ccm_d"
                    android:layout_below="@id/reg_ccm_icon"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#40111111"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/reg_ccm_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reg_ccm_header">

                <ImageView
                    android:id="@+id/reg_ccm_name_icon_1"
                    android:src="@drawable/event_inchr_name"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="10dp" />

                <TextView
                    style="@style/InfoData.EventInchargeData"
                    android:id="@+id/reg_ccm_name_text_1"
                    android:layout_toRightOf="@id/reg_ccm_name_icon_1"
                    android:layout_height="35dp"
                    android:layout_width="match_parent"
                    android:text="@string/reg_ccm_name_1" />

                <ImageView
                    android:id="@+id/reg_ccm_num_icon_1"
                    android:layout_below="@id/reg_ccm_name_icon_1"
                    android:src="@drawable/phone"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="10dp" />

                <TextView
                    style="@style/InfoData.EventInchargeData.Num"
                    android:id="@+id/reg_ccm_num_text_1"
                    android:layout_toRightOf="@id/reg_ccm_num_icon_1"
                    android:layout_below="@id/reg_ccm_name_text_1"
                    android:layout_height="35dp"
                    android:layout_width="match_parent"
                    android:text="@string/reg_ccm_num_1" />

                <ImageView
                    android:id="@+id/reg_ccm_email_icon_1"
                    android:layout_below="@id/reg_ccm_num_icon_1"
                    android:src="@drawable/email"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="10dp" />

                <TextView
                    style="@style/InfoData.EventInchargeData"
                    android:id="@+id/reg_ccm_email_text_1"
                    android:layout_toRightOf="@id/reg_ccm_email_icon_1"
                    android:layout_below="@id/reg_ccm_num_text_1"
                    android:layout_height="35dp"
                    android:layout_width="match_parent"
                    android:text="@string/reg_ccm_email_1" />


            </RelativeLayout>


            <View
                android:id="@+id/reg_ccm_1_d"
                android:layout_below="@id/reg_ccm_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#40111111"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp" />


            <RelativeLayout
                android:id="@+id/reg_ccm_2"
                android:layout_below="@id/reg_ccm_1_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/reg_ccm_name_icon_2"
                    android:src="@drawable/event_inchr_name"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="10dp" />

                <TextView
                    style="@style/InfoData.EventInchargeData"
                    android:id="@+id/reg_ccm_name_text_2"
                    android:layout_toRightOf="@id/reg_ccm_name_icon_2"
                    android:layout_height="35dp"
                    android:layout_width="match_parent"
                    android:text="@string/reg_ccm_name_2" />

                <ImageView
                    android:id="@+id/reg_ccm_num_icon_2"
                    android:layout_below="@id/reg_ccm_name_icon_2"
                    android:src="@drawable/phone"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="10dp" />

                <TextView
                    style="@style/InfoData.EventInchargeData.Num"
                    android:id="@+id/reg_ccm_num_text_2"
                    android:layout_toRightOf="@id/reg_ccm_num_icon_2"
                    android:layout_below="@id/reg_ccm_name_text_2"
                    android:layout_height="35dp"
                    android:layout_width="match_parent"
                    android:text="@string/reg_ccm_num_2" />

                <ImageView
                    android:id="@+id/reg_ccm_email_icon_2"
                    android:layout_below="@id/reg_ccm_num_icon_2"
                    android:src="@drawable/email"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="10dp" />

                <TextView
                    style="@style/InfoData.EventInchargeData"
                    android:id="@+id/reg_ccm_email_text_2"
                    android:layout_toRightOf="@id/reg_ccm_email_icon_2"
                    android:layout_below="@id/reg_ccm_num_text_2"
                    android:layout_height="35dp"
                    android:layout_width="match_parent"
                    android:text="@string/reg_ccm_email_2" />


            </RelativeLayout>


            <View
                android:id="@+id/reg_ccm_2_d"
                android:layout_below="@id/reg_ccm_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#40111111"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp" />

            <RelativeLayout
                android:id="@+id/reg_ccm_3"
                android:layout_below="@id/reg_ccm_2_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/reg_ccm_name_icon_3"
                    android:src="@drawable/event_inchr_name"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="10dp" />

                <TextView
                    style="@style/InfoData.EventInchargeData"
                    android:id="@+id/reg_ccm_name_text_3"
                    android:layout_toRightOf="@id/reg_ccm_name_icon_3"
                    android:layout_height="35dp"
                    android:layout_width="match_parent"
                    android:text="@string/reg_ccm_name_3" />

                <ImageView
                    android:id="@+id/reg_ccm_num_icon_3"
                    android:layout_below="@id/reg_ccm_name_icon_3"
                    android:src="@drawable/phone"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="10dp" />

                <TextView
                    style="@style/InfoData.EventInchargeData.Num"
                    android:id="@+id/reg_ccm_num_text_3"
                    android:layout_toRightOf="@id/reg_ccm_num_icon_3"
                    android:layout_below="@id/reg_ccm_name_text_3"
                    android:layout_height="35dp"
                    android:layout_width="match_parent"
                    android:text="@string/reg_ccm_num_3" />

                <ImageView
                    android:id="@+id/reg_ccm_email_icon_3"
                    android:layout_below="@id/reg_ccm_num_icon_3"
                    android:src="@drawable/email"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="10dp" />

                <TextView
                    style="@style/InfoData.EventInchargeData"
                    android:id="@+id/reg_ccm_email_text_3"
                    android:layout_toRightOf="@id/reg_ccm_email_icon_3"
                    android:layout_below="@id/reg_ccm_num_text_3"
                    android:layout_height="35dp"
                    android:layout_width="match_parent"
                    android:text="@string/reg_ccm_email_3" />


            </RelativeLayout>


        </RelativeLayout>

    </RelativeLayout>
</ScrollView>